--- a/components/navigation/NavigationBar.module.css
+++ b/components/navigation/NavigationBar.module.css
@@ -1,6 +1,35 @@
 .wrapper {
-    display: block;
+    display: flex;
+    flex-direction: column;
     position: relative;
+    justify-content: space-between;
+    width: 100%;
 }
-.item {
+.start {
+    flex-grow: 0;
+    display: flex;
+    flex-direction: column;
+}
+.logo {
+    padding: 1rem;
+    background-color: var(---level-1, #121212);
+}
+.center {
+    flex-grow: 0;
+    display: flex;
+    flex-direction: column;
+}
+.end {
+    flex-grow: 0;
+    display: flex;
+    flex-direction: column;
+}
+.spacer {
+    flex-grow: 1;
+    background-color: var(---level-1, #121212);
+}
+.itemSpacer {
+    width: 100%;
+    background-color: var(---level-1, #121212);
+    height: 24px;
 }
