--- a/ui/button/DangerButton.module.css
+++ b/ui/button/DangerButton.module.css
@@ -5,11 +5,9 @@
     text-align: center;
     line-height: inherit;
     text-decoration: none;
-    padding: 6px 12px;
     border-width: 4px;
     border-style: solid;
     border-color: transparent;
-    border-radius: 16px;
     color: var(---danger-contrast, #F4F4F4);
     background-color: var(---danger, #F20544);
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.16);
@@ -18,6 +16,22 @@
     transition-duration: 200ms;
     transition-property: background;
     transition-timing-function: cubic-bezier(0, 0, 1, 1);
+}
+
+.button.elliptic {
+    border-radius: 16px;
+    padding: 6px 12px;
+}
+
+.button.round {
+    border-radius: 50%;
+    padding: 12px;
+}
+
+.button.inactive {
+    color: var(---muted, #808080);
+    border-color: var(---muted, #808080);
+    background-color: var(---level-4, #808080);
 }
 
 .button:not(:disabled):hover {
