--- a/ui/button/PrimaryButton.module.css
+++ b/ui/button/PrimaryButton.module.css
@@ -5,11 +5,9 @@
     text-align: center;
     line-height: inherit;
     text-decoration: none;
-    padding: 6px 12px;
     border-width: 4px;
     border-style: solid;
     border-color: transparent;
-    border-radius: 16px;
     color: var(---primary-contrast, #f4f4f4);
     background-color: var(---primary, #5779D9);
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.16);
@@ -20,10 +18,29 @@
     transition-timing-function: cubic-bezier(0, 0, 1, 1);
 }
 
+.button.elliptic {
+    border-radius: 16px;
+    padding: 6px 12px;
+}
+
+.button.round {
+    border-radius: 50%;
+    padding: 12px;
+}
+
+.button.inactive {
+    color: var(---muted, #808080);
+    background-color: var(---level-4, #808080);
+}
+
 .button:not(:disabled):hover {
     border-color: var(---primary-hover, #415CA7);
     background-color: var(---primary-hover, #415CA7);
     cursor: pointer;
+}
+
+.button.inactive:not(:disabled):hover {
+    background-color: var(---overlay, rgba(0, 0, 0, 0.3));
 }
 
 .button:not(:disabled):active {
