--- a/ui/button/TertiaryButton.module.css
+++ b/ui/button/TertiaryButton.module.css
@@ -5,13 +5,11 @@
     text-align: center;
     line-height: inherit;
     text-decoration: none;
-    padding: 8px 12px;
     border-width: 2px;
     border-style: solid;
-    border-color: var(---tertiary-border, #808080);
-    border-radius:21px;
-    color: var(---tertiary-contrast, #f4f4f4);
-    background-color: var(---tertiary, transparent);
+    border-color: var(---tertiary-border, transparent);
+    color: var(---tertiary-contrast, #121212);
+    background-color: var(---tertiary, #F4F4F4);
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.16);
     white-space: nowrap;
 
@@ -20,24 +18,45 @@
     transition-timing-function: cubic-bezier(0, 0, 1, 1);
 }
 
+.button.elliptic {
+    border-radius: 21px;
+    padding: 8px 12px;
+}
+
+.button.round {
+    border-radius: 50%;
+    padding: 12px;
+}
+
+.button.inactive {
+    background-color: var(---level-4, #393939);
+}
+
 .button:not(:disabled):hover {
-    color: var(---tertiary-border, #808080);
     border-color: var(---tertiary-hover-border, #676767);
     background-color: var(---tertiary-hover, #1313134D);
     cursor: pointer;
 }
 
 .button:not(:disabled):active {
-    color: var(---tertiary-contrast, #f4f4f4);
-    border-color: var(---tertiary-active, #5779D94D);
+    border-color: var(---tertiary-active, #415CA74D);
     background-color: var(---tertiary-active, #5779D94D);
 }
 
 .button:not(:disabled):focus {
     border-color: var(---tertiary-focus, #253CEB);
+    background-color: var(---tertiary, #F4F4F4);
+    outline: none;
+}
+
+.button.elliptic:not(:disabled):focus {
     padding: 6px 10px;
     border-width: 4px;
-    outline: none;
+}
+
+.button.round:not(:disabled):focus {
+    padding: 10px;
+    border-width: 4px;
 }
 
 .button:disabled {
