--- a/styles/Account.module.css
+++ b/styles/Account.module.css
@@ -1,7 +1,12 @@
 .wrapper {
     width: 100%;
-    padding: 72px;
+    padding: 12px;
     text-align: center;
+}
+@media only screen and (min-width: 600px) {
+    .wrapper {
+        padding: 72px;
+    }
 }
 
 .logo {
