--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,8 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    color: #F4F4F4;
-    background: #343434 0% 0% no-repeat padding-box;
+    color: var(---text, #F4F4F4);
+    background-color: var(---grey-4, #343434);
 }
 
 a {
@@ -22,12 +20,71 @@ a {
     box-sizing: border-box;
 }
 
+p.micro {
+    font-size: 0.8rem;
+}
 
-.authPanel {
-    box-shadow: 0 16px 20px #00000040;
-    border-radius: 18px;
-    padding: 24px;
-    margin: 72px;
-    color: var(---text, #F4F4F4);
-    background-color: var(---level-1, #121212);
+input {
+    font-size: 16px;
+}
+
+html {
+    font-size: 100%;
+}
+
+:root {
+    font-size: 16px;
+}
+
+body {
+    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+}
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+h4 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 1.125rem;
+}
+
+h5 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 0.875rem;
+}
+
+h6 {
+    font-family: 'Open Sans', serif;
+    font-weight: 600;
+    font-size: 0.875rem;
+}
+
+p {
+    font-family: 'Open Sans', serif;
+    font-weight: 600;
+    font-size: 1rem;
+}
+
+p.micro {
+    font-family: 'Open Sans', serif;
+    font-weight: 600;
+    font-size: 0.75rem;
 }
