--- a/components/PageWrapper.module.css
+++ b/components/PageWrapper.module.css
@@ -24,12 +24,13 @@
     transition-timing-function: cubic-bezier(0, 0, 1, 1);
     overflow: hidden;
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px) and (min-height: 600px) {
     .sidebar {
         width: 72px;
     }
 }
 .content {
+    position: relative;
     display: flex;
     flex-grow: 1;
     width: auto;
