--- a/components/mixer/MixingPanel/MixingPanel.module.css
+++ b/components/mixer/MixingPanel/MixingPanel.module.css
@@ -1,13 +1,159 @@
-.headline {
-
+.wrapper {
+    position: absolute;
+    padding: 1rem;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
+
+.inner {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-grow: 1;
+    overflow: hidden;
+    overflow-x: scroll;
+}
+
+@media only screen and (min-width: 600px) and (min-height: 600px) {
+    .inner {
+        flex-direction: column;
+        align-items: flex-start;
+        flex-wrap: nowrap;
+        flex-grow: 1;
+        overflow: hidden;
+    }
+}
+
+.globalSwitch {
+    padding-bottom: 2rem;
+    flex-grow: 0;
+}
+
+.groupWrapper {
+    flex-shrink: 0;
+}
+
+@media only screen and (min-width: 600px) and (min-height: 600px) {
+    .groupWrapper {
+        max-width: 100%;
+        position: relative;
+        overflow-y: hidden;
+        overflow-x: scroll;
+    }
+}
+
+.panel {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    padding: 1rem 1rem;
+    flex-shrink: 0;
+    flex-grow: 0;
+    flex-wrap: nowrap;
+    overflow: visible;
+    width: auto;
+}
+
 .row {
     display: flex;
     flex-direction: row;
-}
-.column {
-    border: 4px solid red;
+    flex-wrap: nowrap;
     border-radius: 18px;
+    flex-shrink: 0;
+    flex-grow: 1;
+    overflow: visible;
+}
+
+.strip {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: stretch;
+    flex-shrink: 0;
+    overflow: visible;
+}
+
+.stripHeadline {
+    padding-left: 8px;
+    padding-right: 8px;
+    flex-grow: 0;
+}
+
+.stripExpander {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding-left: 8px;
+    padding-right: 8px;
+    flex-grow: 0;
+}
+
+.stripExpanderButton {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(---primary, #415CA7);
+    padding: 2px;
+    border-radius: 100%;
+}
+
+.slider {
+    flex-grow: 1;
+    min-height: 200px;
+}
+
+.stripBottom {
+    flex-grow: 0;
+}
+
+
+.groupPanel {
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 18px;
+    background-color: var(---level-1, #121212);
+}
+
+@media only screen and (min-width: 600px) and (min-height: 600px) {
+    .groupPanel {
+        height: auto;
+    }
+}
+
+
+.groupStrip {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.stageMemberRow {
+    background-color: var(---level-2, #1F1F1F);
+}
+
+.stageMemberStrip {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.stageDeviceRow {
+    background-color: var(---level-3, #292929);
+}
+
+.stageDeviceStrip {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.audioTrackRow {
+    background-color: var(---level-4, #393939);
+}
+
+.audioTrackStrip {
+    padding-top: 0;
+    padding-bottom: 0;
 }
