--- a/components/navigation/MobileMenu.module.css
+++ b/components/navigation/MobileMenu.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px) and (min-height: 600px) {
     .wrapper {
         display: none;
     }
@@ -19,7 +19,7 @@
 }
 .active {
     opacity: 1;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 .inactive {
     opacity: 0;
