--- a/components/PageWrapper.module.css
+++ b/components/PageWrapper.module.css
@@ -31,9 +31,8 @@
 }
 .content {
     position: relative;
-    display: flex;
     flex-grow: 1;
-    width: auto;
+    width: 100%;
     height: 100%;
     overflow-y: scroll;
 }
