--- a/components/mixer/MixingPanel/MixingPanel.module.css
+++ b/components/mixer/MixingPanel/MixingPanel.module.css
@@ -1,17 +1,30 @@
 .wrapper {
-    padding: 1rem;
+    display: flex;
+    position: relative;
+    flex-direction: column;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+}
+@media only screen and (min-width: 600px) and (min-height: 600px) {
+    .wrapper {
+        display: block;
+        min-height: auto;
+    }
+}
+
+.globalSwitch {
+    padding: .5rem .5rem 2rem;
+    flex-grow: 0;
 }
 
 .inner {
     position: relative;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    flex-grow: 1;
+    align-items: stretch;
     overflow: hidden;
     overflow-x: scroll;
+    flex-grow: 1;
 }
 
 @media only screen and (min-width: 600px) and (min-height: 600px) {
@@ -21,21 +34,19 @@
         flex-wrap: nowrap;
         flex-grow: 1;
         overflow: hidden;
+        height: auto;
     }
 }
-
-.globalSwitch {
-    padding-bottom: 2rem;
-    flex-grow: 0;
-}
-
 .groupWrapper {
+    padding: .5rem;
     flex-shrink: 0;
+    max-height: 600px;
 }
 
 @media only screen and (min-width: 600px) and (min-height: 600px) {
     .groupWrapper {
-        max-width: 100%;
+        padding: 1rem;
+        height: auto;
         position: relative;
         overflow-y: hidden;
         overflow-x: scroll;
@@ -74,6 +85,7 @@
 }
 
 .stripHeadline {
+    margin: 0;
     padding-left: 8px;
     padding-right: 8px;
     flex-grow: 0;
@@ -100,25 +112,27 @@
 }
 
 .slider {
+    padding: 12px 0;
     flex-grow: 1;
-    min-height: 200px;
 }
 
 .stripBottom {
     flex-grow: 0;
 }
 
-
 .groupPanel {
     border-style: solid;
     border-width: 3px;
     border-radius: 18px;
     background-color: var(---level-1, #121212);
+    height: 100%;
+    min-height: 300px;
 }
 
 @media only screen and (min-width: 600px) and (min-height: 600px) {
     .groupPanel {
         height: auto;
+        min-height: 480px;
     }
 }
 
