--- a/components/mixer/VolumeSlider/VolumeSlider.module.css
+++ b/components/mixer/VolumeSlider/VolumeSlider.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 60px;
-    height: 251px;
+    min-height: 140px;
+    height: auto;
 }
 
 .grow {
