--- a/ui/button/SecondaryButton.module.css
+++ b/ui/button/SecondaryButton.module.css
@@ -23,9 +23,17 @@
     padding: 8px 12px;
 }
 
+.button.round.small {
+    padding: 4px 6px;
+}
+
 .button.round {
     border-radius: 50%;
     padding: 12px;
+}
+
+.button.round.small {
+    padding: 6px;
 }
 
 .button.inactive {
@@ -55,9 +63,17 @@
     border-width: 4px;
 }
 
+.button.elliptic.small:not(:disabled):focus {
+    padding: 2px 4px;
+}
+
 .button.round:not(:disabled):focus {
     padding: 10px;
     border-width: 4px;
+}
+
+.button.round.small:not(:disabled):focus {
+    padding: 4px;
 }
 
 .button:disabled {
