--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@ body {
     background-color: var(---grey-4, #343434);
 }
 
+body {
+    overflow: hidden;
+}
+
 a {
     color: inherit;
     text-decoration: none;
