--- a/components/mixer/MixingPanel/ChannelStrip.module.css
+++ b/components/mixer/MixingPanel/ChannelStrip.module.css
@@ -12,5 +12,10 @@
 }
 
 .bottom {
+    width: 100%;
     flex-grow: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
