--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
 }
 
 body {
+    position: relative;
     overflow: hidden;
 }
 
@@ -28,7 +29,7 @@ p.micro {
     font-size: 0.8rem;
 }
 
-input {
+input, select {
     font-size: 16px;
 }
 
@@ -87,7 +88,7 @@ p {
     font-size: 1rem;
 }
 
-p.micro {
+.micro {
     font-family: 'Open Sans', serif;
     font-weight: 600;
     font-size: 0.75rem;
