--- a/components/PageWrapper.module.css
+++ b/components/PageWrapper.module.css
@@ -38,6 +38,7 @@
     width: 100%;
     height: 100%;
     overflow: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 @supports (-webkit-touch-callout: none) {
