--- a/components/mixer/MixingPanel/MixingPanel.module.css
+++ b/components/mixer/MixingPanel/MixingPanel.module.css
@@ -34,13 +34,14 @@
     overflow: hidden;
     overflow-x: scroll;
     flex-grow: 1;
+    flex-wrap: nowrap;
 }
 
 @media only screen and (min-width: 600px) and (min-height: 600px) {
     .inner {
-        flex-direction: column;
+        /*flex-direction: column;*/
         align-items: flex-start;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         flex-grow: 1;
         overflow: hidden;
         height: auto;
