--- a/ui/button/DangerButton.module.css
+++ b/ui/button/DangerButton.module.css
@@ -5,7 +5,7 @@
     text-align: center;
     line-height: inherit;
     text-decoration: none;
-    border-width: 4px;
+    border-width: 2px;
     border-style: solid;
     border-color: transparent;
     color: var(---danger-contrast, #F4F4F4);
@@ -23,10 +23,19 @@
     padding: 6px 12px;
 }
 
+.button.elliptic.small {
+    padding: 3px 6px;
+}
+
 .button.round {
     border-radius: 50%;
     padding: 12px;
 }
+
+.button.round.small {
+    padding: 6px;
+}
+
 
 .button.inactive {
     color: var(---muted, #808080);
