--- a/ui/button/PrimaryButton.module.css
+++ b/ui/button/PrimaryButton.module.css
@@ -23,9 +23,17 @@
     padding: 6px 12px;
 }
 
+.button.elliptic.small {
+    padding: 3px 6px;
+}
+
 .button.round {
     border-radius: 50%;
     padding: 12px;
+}
+
+.button.round.small {
+    padding: 6px;
 }
 
 .button.inactive {
