--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,14 +25,6 @@ a {
     box-sizing: border-box;
 }
 
-p.micro {
-    font-size: 0.8rem;
-}
-
-input, select {
-    font-size: 16px;
-}
-
 html {
     font-size: 100%;
 }
@@ -44,6 +36,18 @@ html {
 body {
     font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+p.micro {
+    font-size: 0.8rem;
+}
+
+input, select {
+    font-size: 1rem;
+}
+
+button {
+    font-size: 0.8rem;
 }
 
 h1 {
