--- a/components/PageWrapper.module.css
+++ b/components/PageWrapper.module.css
@@ -1,16 +1,12 @@
 .wrapper {
-    position: absolute;
+    position: fixed;
     display: flex;
-    flex-direction: row;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100vw;
     height: 100vh;
-}
-
-.backgroundWrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
 }
 
 .sidebar {
@@ -35,8 +31,6 @@
 .content {
     position: relative;
     flex-grow: 1;
-    width: 100%;
-    height: 100%;
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
 }
