--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,8 +1,53 @@
-.insideStage {
-
+@mixin animate($property) {
+  transition-duration: 200ms;
+  transition-property: $property;
+  transition-timing-function: cubic-bezier(0, 0, 1, 1);
 }
 
+/***
+  GENERAL LAYOUT
+ */
+.layout {
+  position: relative;
+  display: flex;
+  min-height: 0;
+  width: 100%;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
+  .sidebar {
+    position: relative;
+    flex-shrink: 0;
+    flex-grow: 0;
+    width: 0;
+    @include animate(width);
+
+    @media only screen and (min-width: 600px) and (min-height: 600px) {
+      width: 72px;
+    }
+
+    .fixedSidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+    }
+  }
+
+
+  .content {
+    flex-grow: 1;
+    display: block;
+    min-height: 100vh;
+  }
+}
+
+
 .container {
+
+  .panel {
+
+  }
 
   header {
 
@@ -16,6 +61,12 @@
   }
 
   a {
+
+  }
+}
+
+.insideStage {
+  .container {
 
   }
 }
