--- a/components/Background.module.css
+++ b/components/Background.module.css
@@ -1,13 +1,13 @@
 .background {
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background: transparent linear-gradient(221deg, #F20544 0%, #F00544 2%, #F20544 2%, #F20544 10%, #721542 50%, #012340 100%) no-repeat fixed 0 0;
-    width: 100%;
-    min-height: 100%;
+    width: 100vw;
+    min-height: 100vh;
     flex-direction: column;
 }
 
