Added collapse and list

--- a/components/ui/DangerButton.module.css
+++ b/components/ui/DangerButton.module.css
@@ -60,6 +60,10 @@
     outline: none;
 }
 
+.button.round.small:not(:disabled):focus {
+    padding: 4px;
+}
+
 .button:disabled {
     opacity: 0.5;
     cursor: default !important;
