--- a/styles/root.css
+++ b/styles/root.css
@@ -44,6 +44,8 @@
   ---success-dark: #2f8a49;
   ---warn: #F0C11B;
   ---warn-dark: #bd9815;
+  ---warn-hover: #F0C11B;
+  ---warn-active: #ffce1c;
   ---warn-contrast: #F4F4F4;
   ---grey-1: #121212;
   ---grey-2: #1F1F1F;
