--- a/components/ui/Button.module.scss
+++ b/components/ui/Button.module.scss
@@ -267,7 +267,7 @@ MINIMAL COLOR
   color: var(---text, #F4F4F4);
   background-color: transparent;
   border-radius: unset;
-
+  box-shadow: none;
 
   .icon {
     background-color: transparent;
