--- a/components/MobileMenu.module.css
+++ b/components/MobileMenu.module.css
@@ -1,19 +1,27 @@
 .wrapper {
     position: fixed;
+    display: inline-flex;
     bottom: 1rem;
     right: 1rem;
-    display: inline-flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-end;
+}
+@media only screen and (min-width: 600px) {
+    .wrapper {
+        flex-direction: row;
+        justify-content: flex-end;
+    }
 }
 @media only screen and (min-width: 600px) and (min-height: 600px) {
     .wrapper {
         display: none;
     }
 }
+
 .menuItem {
     z-index: -1;
-    transition-property: opacity, margin-bottom;
+    transition-property: opacity, margin;
     transition-duration: 400ms;
     transition-timing-function: cubic-bezier(0.2, 0.8, 0.4, 1);
 }
@@ -24,4 +32,15 @@
 .inactive {
     opacity: 0;
     margin-bottom: -100%;
+}
+
+@media only screen and (min-width: 600px) {
+    .active {
+        margin-bottom: 0;
+        margin-right: 1rem;
+    }
+    .inactive {
+        margin-bottom: 0;
+        margin-right: -100%;
+    }
 }
