--- a/components/ProfileMenu.module.css
+++ b/components/ProfileMenu.module.css
@@ -7,7 +7,8 @@
 }
 .backdrop {
     position: fixed;
-    background-color: var(---overlay, rgba(0, 0, 0, 0.3));
+    background-color: var(---overlay, rgba(0, 0, 0, 0.4));
+    backdrop-filter: blur(10px) opacity(1);
     top: 0;
     left: 0;
     right: 0;
