--- a/components/ui/Background.module.css
+++ b/components/ui/Background.module.css
@@ -6,8 +6,8 @@
     right: 0;
     bottom: 0;
     background: transparent linear-gradient(221deg, #F20544 0%, #F00544 2%, #F20544 2%, #F20544 10%, #721542 50%, #012340 100%) no-repeat fixed 0 0;
-    width: 100vw;
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
     flex-direction: column;
 }
 
