--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
     margin: 0;
     color: var(---text, #F4F4F4);
     background-color: var(---grey-4, #343434);
+    width: 100%;
+    height: 100%;
 }
 
 body {
