--- a/styles/Chat.module.css
+++ b/styles/Chat.module.css
@@ -5,7 +5,12 @@
     margin: 0;
     width: 100%;
     height: 100%;
-    padding: 12px 12px 48px;
+    padding: 12px 12px 96px;
+}
+@media only screen and (min-width: 600px) and (min-height: 600px) {
+    .wrapper {
+        padding-bottom: 48px;
+    }
 }
 
 .outerPanel {
