--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,6 +11,7 @@
 @import "globals/menu";
 @import "globals/modal";
 @import "globals/notification";
+@import "globals/optionslist";
 @import "globals/panel";
 @import "globals/select";
 @import "globals/switch";
