--- a/styles/globals/optionslist.scss
+++ b/styles/globals/optionslist.scss
@@ -1,16 +1,19 @@
-.settings {
+.optionsList {
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   max-width: 800px;
 
-  .setting {
+  .optionsListItem {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
+    align-content: flex-end;
     font-weight: bold;
+    padding: 8px 4px;
 
     @media only screen and (min-width: 600px) and (min-height: 600px) {
       padding: 8px 0 8px 16px;
@@ -19,6 +22,7 @@
     &.sub {
       font-size: 0.8rem;
       font-weight: normal;
+      padding: 4px;
       @media only screen and (min-width: 600px) and (min-height: 600px) {
         padding: 8px 0 8px 32px;
       }
