--- a/components/global/ConnectionOverlay.module.scss
+++ b/components/global/ConnectionOverlay.module.scss
@@ -1,11 +1,14 @@
 .overlay {
   position: fixed;
+  width: 100vw;
+  height: 100vh;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: var(---text);
-  background-color: var(---grey-1)
 }
