--- a/styles/globals/switch.scss
+++ b/styles/globals/switch.scss
@@ -24,6 +24,7 @@ div.switch {
     border-color: transparent;
     border-width: 4px;
     border-style: solid;
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3);
 
     &:before {
       position: absolute;
@@ -59,4 +60,22 @@ div.switch {
     -ms-transform: translateX(26px);
     transform: translateX(26px);
   }
+
+  &.small {
+    width: 48px;
+    height: 27px;
+
+    span.slider {
+      &:before {
+        height: 20px;
+        width: 20px;
+      }
+    }
+    input:checked + .slider:before {
+      -webkit-transform: translateX(20px);
+      -ms-transform: translateX(20px);
+      transform: translateX(20px);
+    }
+  }
+
 }
