--- a/components/global/Sidebar.module.scss
+++ b/components/global/Sidebar.module.scss
@@ -14,6 +14,7 @@
   max-width: 60vw;
   transform: translateX(-100%);
   overflow-y: scroll;
+  background-color: var(---grey-1);
 
   @media only screen and (min-width: 600px) and (min-height: 600px) {
     position: relative;
@@ -22,6 +23,7 @@
     padding-top: 0;
     transform: none;
     font-size: .7rem;
+    background-color: transparent;
 
     &.hidden {
       transform: translateX(-100%);
@@ -54,7 +56,7 @@
 }
 
 .sidebarHeader, .sidebarFooter, .sidebarSpacer {
-  background-color: #121212;
+  background-color: var(---grey-1);
 }
 
 .sidebarHeader {
@@ -99,7 +101,7 @@
   transition-duration: .2s;
   transition-timing-function: cubic-bezier(.2, .8, .4, 1);
   color: #f4f4f4;
-  background-color: #121212;
+  background-color: var(---grey-1);
   border-width: 4px;
   border-style: solid;
   border-color: transparent;
@@ -129,17 +131,16 @@
       width: 24px;
       height: 24px;
       transition: all 200ms;
+      transform: translateY(8px);
     }
   }
 
   &:focus {
-    border-color: #253CEB !important;
+    border-color: var(---focus) !important;
   }
 
   &:hover {
-    &:focus {
-      background-color: rgba(255, 255, 255, 0.1)
-    }
+    background-color: var(---grey-3);
 
     @media only screen and (min-width: 600px) and (min-height: 600px) {
       span {
@@ -148,12 +149,16 @@
       svg {
         width: 18px;
         height: 18px;
+        transform: none;
       }
     }
   }
 
   &.selected {
-    background-color: transparent;
+    background-color: var(---primary);
+    @media only screen and (min-width: 600px) and (min-height: 600px) {
+      background-color: transparent;
+    }
   }
 }
 
