--- a/styles/globals/select.scss
+++ b/styles/globals/select.scss
@@ -1,7 +1,6 @@
 .select {
   position: relative;
   display: inline-flex;
-  flex-shrink: 1;
 
   & > span {
     position: absolute;
@@ -30,6 +29,8 @@
     appearance: none;
     outline: none;
     cursor: pointer;
+
+    width: 100%;
 
     height: 40px;
 
