Removed start homepage

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -12,6 +12,7 @@
 @import "globals/modal";
 @import "globals/notification";
 @import "globals/optionslist";
+@import "globals/topoverlay";
 @import "globals/panel";
 @import "globals/select";
 @import "globals/switch";
