--- a/components/stages/StagesList.module.scss
+++ b/components/stages/StagesList.module.scss
@@ -11,3 +11,19 @@
   width: 100%;
   text-align: right;
 }
+.actions {
+  display: inline-flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
+
+  button {
+    margin: 8px 0;
+  }
+}
+.hideOnMobile {
+  display: none;
+  @media only screen and (min-width: 600px) and (min-height: 600px) {
+    display: inline;
+  }
+}
