--- a/components/stage/StageView.module.scss
+++ b/components/stage/StageView.module.scss
@@ -14,10 +14,11 @@ $portraitAspectRatio: math.div($width, $height);
   justify-content: center;
   border-radius: 50%;
   color: var(---text);
-  border: 2px solid var(---danger);
-
-  .active {
-    border: 2px solid var(---success);
+  border-width: 4px;
+  border-style: solid;
+  border-color: var(---danger);
+  &.active {
+    border-color: var(---success);
   }
 }
 
