Added missing scss files

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -22,6 +22,8 @@
 @import "layout/auth";
 @import "layout/chat";
 @import "layout/devices";
+@import "layout/mixer";
+@import "layout/room";
 @import "layout/settings";
 @import "layout/stage";
 @import "layout/stages";
