--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,23 +1,24 @@
 @import "/fonts/fonts.css";
 @import "typography";
-@import "globals/backdrop";
+@import "ui/backdrop";
 @import "globals/background";
-@import "globals/button";
-@import "globals/collapse";
-@import "globals/container";
-@import "globals/headline-button";
-@import "globals/input";
-@import "globals/list";
-@import "globals/menu";
-@import "globals/modal";
-@import "globals/notification";
-@import "globals/optionslist";
-@import "globals/topoverlay";
-@import "globals/panel";
-@import "globals/select";
-@import "globals/switch";
-@import "globals/tag";
-@import "globals/textswitch";
+@import "globals/deviceselector";
+@import "ui/button";
+@import "ui/collapse";
+@import "ui/container";
+@import "ui/headline-button";
+@import "ui/input";
+@import "ui/list";
+@import "ui/menu";
+@import "ui/modal";
+@import "ui/notification";
+@import "ui/optionslist";
+@import "ui/topoverlay";
+@import "ui/panel";
+@import "ui/select";
+@import "ui/switch";
+@import "ui/tag";
+@import "ui/textswitch";
 @import "layout/app";
 @import "layout/auth";
 @import "layout/chat";
