--- a/styles/layout/devices.scss
+++ b/styles/layout/devices.scss
@@ -23,6 +23,13 @@
       margin-right: 4px;
     }
   }
+
+  .label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 10px;
+  }
 }
 .devicePanel {
   margin-bottom: 64px;
