--- a/styles/layout/app.scss
+++ b/styles/layout/app.scss
@@ -4,7 +4,7 @@
   display: flex;
   min-height: 100vh;
 
-  & > .inner {
+  & > .appInner {
     position: relative;
     display: flex;
     flex-direction: column;
