--- a/styles/layout/room.scss
+++ b/styles/layout/room.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
 
-  .inner {
+  .roomInner {
     position: absolute;
     top: 0;
     left: 0;
@@ -24,47 +24,49 @@
       background: url("/room/background.svg") !important;
     }
   }
-}
 
-.resetPanel {
-  position: fixed;
-  bottom: 88px;
-  right: 8px;
-  margin-left: 24px;
+  .roomResetPanel {
+    position: fixed;
+    bottom: 88px;
+    right: 8px;
+    margin-left: 24px;
 
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 
-  button {
-    margin-top: 8px
+    button {
+      margin-top: 8px
+    }
+
+    @media only screen and (min-width: 700px) and (min-height: 600px) {
+      right: 24px;
+      bottom: 24px;
+      margin-left: 0;
+    }
   }
 
-  @media only screen and (min-width: 700px) and (min-height: 600px) {
-    right: 24px;
-    bottom: 24px;
-    margin-left: 0;
-  }
-}
 
-.switch {
-  position: absolute;
-  top: 52px;
-  left: 50%;
-  width: auto;
-  margin-bottom: 18px;
-  font-size: 10px;
-  transform: translateX(-50%);
+  .roomModeSwitch {
+    position: absolute;
+    top: 52px;
+    left: 50%;
+    width: auto;
+    margin-bottom: 18px;
+    font-size: 10px;
+    transform: translateX(-50%);
 
-  @media only screen and (min-width: 600px) and (min-height: 600px) {
-    font-size: 12px;
-    left: 24px;
-    transform: none;
-    top: 24px;
-    margin-right: 0;
+    @media only screen and (min-width: 600px) and (min-height: 600px) {
+      font-size: 12px;
+      left: 24px;
+      transform: none;
+      top: 24px;
+      margin-right: 0;
+    }
+
+    span {
+      white-space: nowrap;
+    }
   }
 
-  span {
-    white-space: nowrap;
-  }
 }
